removed depreciated code and fixed padding bug on mobile landscape mode
removed depreciated bootstrap carousel code from html and css.
fixed mobile landscape mode bug on email marketing page causing outer padding to be ignored.

--- a/Public/styles.css
+++ b/Public/styles.css
@@ -8,7 +8,6 @@ body {
   display: flex;
   justify-content: center;
 }
-
 /* Resets */
 h1,
 h2,
@@ -23,7 +22,6 @@ ul {
   list-style: none;
 }
 /* //Resets */
-
 .grid-container {
   display: grid;
   grid-template-columns: 1fr;
@@ -33,7 +31,7 @@ ul {
     "main"
     "footer";
   gap: 15px;
-  margin: 0 20px;
+  padding: 0 20px;
   max-width: 880px;
   height: fit-content;
 }
@@ -164,36 +162,11 @@ li {
   opacity: 65%;
 }
 /* Email Marketing Page */
-/* Bootstrap Carousel Styling */
-#carouselOuterContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#carouselSizeContainer {
-  width: 90%;
-  border-radius: 1%;
-  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-}
-.carousel-indicators {
-  background-color: #686868;
-  opacity: 90%;
-}
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-  background-color: #686868;
-  border-radius: 20%;
-}
-.carousel-item a img {
-  border-radius: 1%;
-}
-/* //Bootstrap Carousel Styling */
 /* GlideJS Styling */
 .carouselOuterContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* margin-top: 50px; */
 }
 .carouselSizeContainer {
   width: 100%;
@@ -202,6 +175,13 @@ li {
   padding-top: 50px;
   padding-bottom: 80px;
 }
+.carousel_img {
+  width: 100%;
+  border-radius: 1%;
+  height: auto;
+  object-fit: cover;
+}
+/* glideJS default classes */
 .glide__track {
   border-radius: 1%;
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
@@ -212,12 +192,7 @@ li {
 .glide__arrow {
   top: 107%;
 }
-.carousel_img {
-  width: 100%;
-  border-radius: 1%;
-  height: auto;
-  object-fit: cover;
-}
+/* //glideJS default classes */
 /* //GlideJS Styling */
 /* //Email Marketing Page */
 /* Web Projects Page  */
@@ -297,21 +272,20 @@ li {
   .carouselSizeContainer {
     max-width: 400px;
   }
+  /* glideJS default classes */
   .glide__bullets {
     bottom: -7%;
   }
   .glide__arrow {
     top: 106%;
   }
+  /* //glideJS default classes */
 }
 @media screen and (min-width: 475px) {
   #main,
   #footer {
     max-width: 554px;
   }
-  /* #carouselSizeContainer {
-    width: 80%;
-  } */
   .carouselSizeContainer {
     max-width: 435px;
   }
@@ -330,40 +304,41 @@ li {
     font-size: 2.5rem;
     line-height: 2.9rem;
   }
-  /* #carouselSizeContainer {
-    width: 60%;
-  } */
   .carouselSizeContainer {
     max-width: 560px;
   }
+  /* glideJS default classes */
   .glide__bullets {
     bottom: -6%;
   }
   .glide__arrow {
     top: 105%;
   }
+  /* //glideJS default classes */
 }
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
   #main,
   #footer {
-    max-width: 100vw;
+    max-width: 95vw;
   }
 }
 @media screen and (min-width: 700px) {
   .carouselSizeContainer {
-    max-width: 100%;
+    max-width: 95%;
   }
   .carousel_img {
     max-width: 400px;
     max-height: 685px;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
   }
+  /* glideJS default classes */
   .glide__bullets {
     bottom: -12%;
   }
   .glide__arrow {
     top: 111%;
   }
+  /* //glideJS default classes */
 }
 
 @media screen and (min-width: 855px) {
